--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Cliqo SAAS Platform</title>\n    <link rel="stylesheet" href="styles.css">\n</head>\n<body>\n    <header>\n        <nav>\n            <ul>\n                <li><a href="#features">Features</a></li>\n                <li><a href="#pricing">Pricing</a></li>\n                <li><a href="#trustcentre">Trust Centre</a></li>\n                <li><a href="#about">About</a></li>\n                <li><a href="#documentation">Documentation</a></li>\n                <li><a href="#contact">Contact</a></li>\n            </ul>\n        </nav>\n        <h1>Welcome to Cliqo</h1>\n        <p>Your ultimate UGC campaign management and creator collaboration platform.</p>\n    </header>\n    <main>\n        <section id="features">\n            <h2>Features</h2>\n            <p>Discover powerful tools designed to enhance your UGC campaigns and facilitate collaboration with creators.</p>\n        </section>\n        <section id="pricing">\n            <h2>Pricing</h2>\n            <p>Explore our flexible pricing plans tailored to your needs.</p>\n        </section>\n        <section id="trustcentre">\n            <h2>Trust Centre</h2>\n            <p>Your security and data protection is our priority. Learn more about our measures.</p>\n        </section>\n        <section id="about">\n            <h2>About Us</h2>\n            <p>We are dedicated to empowering brands through innovative UGC strategies.</p>\n        </section>\n        <section id="documentation">\n            <h2>Documentation</h2>\n            <p>Find detailed information and guides to optimize your experience.</p>\n        </section>\n        <section id="contact">\n            <h2>Contact Us</h2>\n            <p>Get in touch with us for inquiries or support.</p>\n        </section>\n    </main>\n    <footer>\n        <p>&copy; 2026 Cliqo. All rights reserved.</p>\n    </footer>\n</body>\n</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cliqo - UGC Campaign Management Platform</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">Cliqo</div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="features.html">Features</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="trust-centre.html">Trust Centre</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="hero">
+        <div class="container">
+            <h1>Scale Your Brand with Authentic User-Generated Content</h1>
+            <p>The all-in-one platform for managing UGC campaigns and collaborating with creators</p>
+            <div class="cta-buttons">
+                <button class="btn btn-primary">Start Free Trial</button>
+                <button class="btn btn-secondary">Watch Demo</button>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="features-overview">
+            <div class="container">
+                <h2>Why Choose Cliqo?</h2>
+                <div class="feature-grid">
+                    <div class="feature-card">
+                        <h3>Easy Campaign Management</h3>
+                        <p>Create, launch, and manage campaigns in minutes with our intuitive interface</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Access to Top Creators</h3>
+                        <p>Connect with thousands of verified content creators across multiple niches</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Real-Time Analytics</h3>
+                        <p>Track campaign performance and ROI with comprehensive analytics dashboard</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Secure & Compliant</h3>
+                        <p>Enterprise-grade security with ISO 27001 and SOC 2 Type II certifications</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="cta-section">
+            <div class="container">
+                <h2>Ready to Transform Your Marketing?</h2>
+                <p>Join hundreds of brands already using Cliqo</p>
+                <button class="btn btn-primary">Start Your Free Trial Today</button>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h4>Product</h4>
+                    <ul>
+                        <li><a href="features.html">Features</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="terms-of-service.html">Terms of Service</a></li>
+                        <li><a href="trust-centre.html">Trust Centre</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2026 Cliqo. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
