Create trust-centre.html with security, compliance, and SLA information

--- a/trust-centre.html
+++ b/trust-centre.html
@@ -4,55 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trust Centre</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Trust and Security Information</h1>
-    <h2>Compliance Certifications</h2>
-    <p>We comply with various industry standards and regulations, including:
-        <ul>
-            <li>ISO 27001</li>
-            <li>GDPR</li>
-            <li>HIPAA</li>
-            <li>PCI DSS</li>
-        </ul>
-    </p>
-    <h2>Data Protection</h2>
-    <p>Our data protection measures include:
-        <ul>
-            <li>Data encryption both at rest and in transit.</li>
-            <li>Regular vulnerability assessments and penetration testing.</li>
-            <li>Data backups and disaster recovery plans.</li>
-        </ul>
-    </p>
-    <h2>Service Level Agreements (SLAs)</h2>
-    <p>We commit to the following Service Level Agreements:
-        <ul>
-            <li>99.9% uptime guarantee.</li>
-            <li>24/7 customer support.</li>
-            <li>Response times for support tickets based on severity levels.</li>
-        </ul>
-    </p>
-    <h2>Security Practices</h2>
-    <p>Our security practices include:</p>
-    <ul>
-        <li>Employee training on security awareness.</li>
-        <li>Strict access controls and authentication mechanisms.</li>
-        <li>Regular security audits and compliance checks.</li>
-    </ul>
-    <h2>Privacy Policies</h2>
-    <p>We are committed to protecting user privacy. Our privacy policies include:</p>
-    <ul>
-        <li>Transparency in data collection and usage.</li>
-        <li>User consent for data processing.</li>
-        <li>Options for data access and deletion.</li>
-    </ul>
-    <h2>Audit Information</h2>
-    <p>Our auditing processes ensure:
-        <ul>
-            <li>Regular third-party audits.</li>
-            <li>Internal audit reviews and reporting.</li>
-            <li>Compliance with regulatory requirements.</li>
-        </ul>
-    </p>
+    <header>
+        <h1>Security, Compliance, and SLA Information</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Security</h2>
+            <p>Our platform employs industry-standard security measures, including encrypted data storage, secure code practices, and regular security audits to ensure the safety of our clients' data.</p>
+            <ul>
+                <li>Data Encryption: All sensitive data is encrypted both at rest and in transit using AES-256 encryption.</li>
+                <li>Access Controls: We implement strict access controls to ensure that only authorized personnel have access to sensitive information.</li>
+                <li>Incident Response: Our incident response plan includes immediate action to mitigate any potential security breach.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Compliance</h2>
+            <p>We adhere to several industry standards and regulations, ensuring compliance in all aspects of our service delivery.</p>
+            <ul>
+                <li>GDPR Compliance: We are committed to protecting the privacy of our European clients and comply with the GDPR regulations.</li>
+                <li>ISO 27001 Certification: We have achieved ISO 27001 certification, demonstrating our commitment to information security management.</li>
+                <li>HIPAA Compliance: For clients in the healthcare industry, we comply with HIPAA regulations to safeguard patient information.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Service Level Agreement (SLA)</h2>
+            <p>Our Service Level Agreement outlines our commitment to providing high availability and reliable service.</p>
+            <ul>
+                <li>Uptime Guarantee: We guarantee 99.9% uptime for our services, ensuring that our clients can rely on our platform.</li>
+                <li>Response Time: Our support team is committed to responding to all inquiries within one business day.</li>
+                <li>Compensation: In the unlikely event of non-compliance with our SLA, we offer compensation in the form of service credits.</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2026 FuMonster. All rights reserved.</p>
+    </footer>
 </body>
 </html>
