--- a/features.html
+++ b/features.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Features</title>
+    <title>Key Features of Cliqo SAAS Platform</title>
 </head>
 <body>
-    <h1>Features</h1>
-    <p>Welcome to the features page of our application. Here you will find all the amazing features that our product offers, including:</p>
+    <h1>Key Features of Cliqo SAAS Platform</h1>
     <ul>
-        <li>User-friendly interface</li>
-        <li>High performance</li>
-        <li>Secure and reliable</li>
-        <li>Regular updates</li>
-        <li>Customizable settings</li>
+        <li><strong>UGC Campaign Management:</strong> Manage user-generated content campaigns effectively to drive engagement and brand awareness.</li>
+        <li><strong>Creator Collaboration Tools:</strong> Tools for collaboration between creators to foster innovative content production and partnerships.</li>
+        <li><strong>Analytics:</strong> Comprehensive analytics to measure campaign performance and user engagement metrics.</li>
+        <li><strong>Integration Capabilities:</strong> Seamless integration with various platforms and tools for enhanced functionality.</li>
     </ul>
-    <p>Stay tuned for more features as we continue to improve our product!</p>
 </body>
 </html>
