Add pricing.html with pricing tiers and plans for Cliqo SAAS platform

--- a/pricing.html
+++ b/pricing.html
@@ -4,37 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing Plans</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body { font-family: Arial, sans-serif; }
+        table { width: 100%; border-collapse: collapse; }
+        th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
+        th { background-color: #f2f2f2; }
+        .cta-button { padding: 10px 20px; background-color: #28a745; color: white; text-decoration: none; border-radius: 5px; }
+    </style>
 </head>
 <body>
-    <h1>Pricing Tiers and Plans</h1>
-    <div class="pricing">
-        <div class="tier">
-            <h2>Basic Tier</h2>
-            <p>Price: $10/month</p>
-            <ul>
-                <li>Access to basic features</li>
-                <li>Community support</li>
-            </ul>
-        </div>
-        <div class="tier">
-            <h2>Standard Tier</h2>
-            <p>Price: $20/month</p>
-            <ul>
-                <li>Access to all basic features</li>
-                <li>Email support</li>
-                <li>Regular updates</li>
-            </ul>
-        </div>
-        <div class="tier">
-            <h2>Premium Tier</h2>
-            <p>Price: $30/month</p>
-            <ul>
-                <li>All standard features</li>
-                <li>Priority support</li>
-                <li>Access to premium content</li>
-            </ul>
-        </div>
-    </div>
+    <h1>Pricing Plans for Cliqo SAAS Platform</h1>
+
+    <table>
+        <tr>
+            <th>Plan</th>
+            <th>Price</th>
+            <th>Features</th>
+            <th>Action</th>
+        </tr>
+        <tr>
+            <td>Basic</td>
+            <td>$10/month</td>
+            <td>
+                <ul>
+                    <li>Feature 1</li>
+                    <li>Feature 2</li>
+                    <li>Feature 3</li>
+                </ul>
+            </td>
+            <td><a href="#" class="cta-button">Choose Basic</a></td>
+        </tr>
+        <tr>
+            <td>Pro</td>
+            <td>$25/month</td>
+            <td>
+                <ul>
+                    <li>Feature 1</li>
+                    <li>Feature 2</li>
+                    <li>Feature 3</li>
+                    <li>Feature 4</li>
+                </ul>
+            </td>
+            <td><a href="#" class="cta-button">Choose Pro</a></td>
+        </tr>
+        <tr>
+            <td>Enterprise</td>
+            <td>$50/month</td>
+            <td>
+                <ul>
+                    <li>Feature 1</li>
+                    <li>Feature 2</li>
+                    <li>Feature 3</li>
+                    <li>Feature 4</li>
+                    <li>Feature 5</li>
+                </ul>
+            </td>
+            <td><a href="#" class="cta-button">Choose Enterprise</a></td>
+        </tr>
+    </table>
 </body>
 </html>
