Create about.html with company information, mission, values, and team details

--- a/about.html
+++ b/about.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Mission, Vision, and Values</title>
+    <title>About Cliqo</title>
 </head>
 <body>
-    <h1>Our Company</h1>
-    <h2>Mission</h2>
-    <p>Our mission is to deliver innovative solutions that make life easier for our customers.</p>
+    <h1>About Cliqo</h1>
+    <h2>Company Information</h2>
+    <p>Cliqo is a leading provider of innovative solutions designed to enhance user experience and efficiency. Our dedication to quality and customer satisfaction sets us apart in a competitive marketplace.</p>
 
-    <h2>Vision</h2>
-    <p>We envision a world where our technology empowers individuals and enhances their daily experiences.</p>
+    <h2>Mission</h2>
+    <p>Our mission is to empower people and organizations through cutting-edge technology, ensuring seamless interaction and connectivity in an ever-evolving digital world.</p>
 
     <h2>Values</h2>
     <ul>
-        <li>Integrity</li>
-        <li>Innovation</li>
-        <li>Customer Focus</li>
-        <li>Teamwork</li>
-        <li>Excellence</li>
+        <li>Integrity: We uphold the highest standards of integrity in all of our actions.</li>
+        <li>Innovation: We strive to innovate and continuously improve our products and services.</li>
+        <li>Customer Focus: We place our customers at the heart of everything we do.</li>
+        <li>Teamwork: We believe in the power of collaboration and teamwork to achieve our goals.</li>
     </ul>
+
+    <h2>Our Team</h2>
+    <p>Our team is composed of dedicated professionals with diverse skills and backgrounds, all united by a common goal: to deliver exceptional value to our clients. We foster a culture of learning and growth, encouraging our team members to develop their skills and reach their full potential.</p>
 </body>
 </html>
